LMSA-8533 - some of the embedded services conversion